<resources>
    <string name="app_name">FakeLoginApp</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="log_in_register">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="for_you_account">FOR YOU ACCOUNT</string>
    <string name="name">name</string>
    <string name="i_have_read_and_agree_the_privacy_policy">I have read and agree the Privacy Policy</string>
    <string name="for_your_account">FOR YOUR ACCOUNT</string>
    <string name="create_account">Create Account</string>
    <string name="to_continue">TO CONTINUE</string>
    <string name="login">Login</string>
    <string name="welcome">WELCOME</string>
    <string name="name_empty"> Nome não preenchido</string>
    <string name="email_empty"> Email não preenchido</string>
    <string name="password_empty"> Senha não preenchida</string>
    <string name="user_registered_success"> Usuário registrado com sucesso! </string>
    <string name="nonexistent_user"> Usuário inexistente </string>
    <string name="email_already_registered"> Email já cadastrado </string>
</resources>